# carla-auto-bridge

./: README.md
autoware_bridge/: CMakeLists.txt  package.xml
autoware_bridge/launch/: autoware_bridge_launch.xml
autoware_bridge/src/: carla_autoware_tf.cpp  carla_transfer_pointcloud.cpp  carla_vehicle_interface.cpp
carla_ros_bridge/launch/: carla_ros_bridge_with_example_ego_vehicle.launch.py
carla_ros_bridge/src/carla_ros_bridge/: bridge.py
carla_spawn_objects/config/: objects.json
carla_spawn_objects/launch/: carla_example_ego_vehicle.launch.py
carla_spawn_objects/src/carla_spawn_objects/: carla_spawn_objects.py
pcl_recorder/src/: PclRecorderROS2.cpp
ros_compatibility/src/ros_compatibility/: node.py
